# path-manager

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
locales/: en.toml  vi.toml
src/: i18n.rs  logic.rs  main.rs  ui.rs
src/logic/: mod.rs  unix.rs  windows.rs
